--- a/composer.json
+++ b/composer.json
@@ -17,8 +17,8 @@
     ],
     "require": {
         "php": "^7.1",
-        "illuminate/support": "^5.0|^6.0|^7.0",
-        "livewire/livewire": "^1.1"
+        "illuminate/support": "^5.0|^6.0|^7.0|^8.0",
+        "livewire/livewire": "^1.1|^2.0"
     },
     "require-dev": {
         "orchestra/testbench": "^4.0",
