--- a/composer.json
+++ b/composer.json
@@ -17,12 +17,12 @@
     ],
     "require": {
         "php": "^7.2|^8.0",
-        "illuminate/support": "^7.0|^8.0|^9.0|^10.0",
-        "livewire/livewire": "^1.0|^2.0"
+        "illuminate/support": "^7.0|^8.0|^9.0|^10.0|^11.0",
+        "livewire/livewire": "^1.0|^2.0|^3.4"
     },
     "require-dev": {
-        "orchestra/testbench": "^5.0|^6.0",
-        "phpunit/phpunit": "^8.0|^9.0"
+        "orchestra/testbench": "^5.0|^6.0|^9.0",
+        "phpunit/phpunit": "^8.0|^9.0|^10.5"
     },
     "autoload": {
         "psr-4": {
@@ -37,7 +37,6 @@
     "scripts": {
         "test": "vendor/bin/phpunit",
         "test-coverage": "vendor/bin/phpunit --coverage-html coverage"
-
     },
     "config": {
         "sort-packages": true
